# C-dataManagement

./: LICENSE.md  README.md
SampleCode/Assignment1/: Q1.c  Q2.c  Q3.c
SampleCode/Assignment2/: Q1.c  Q2.c  Q4.c
SampleCode/Assignment3/: Q1.c  Q2.c  Q3.c
SampleCode/Lab1/: readnumsv6.c
SampleCode/Lab2/: queueproblem.c  stackproblem.c
SampleCode/Lab3/: LAB03BST2.c
SampleCode/Lab4/: CMakeLists.txt  LAB4_AVL.c  avl.c  avl.h  avl_data_A.txt  bintree.c  bintree.h  bst.c  bst.h  lab04data_B.txt  main_B.c
